--- a/impressum.html
+++ b/impressum.html
@@ -5,7 +5,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Impressum | Wallify IG</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <script id="tailwind-config">
@@ -14,20 +14,17 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#E1306C",
-                        "background-light": "#f6f6f8",
-                        "background-dark": "#121121",
-                    },
-                    backgroundImage: {
-                        'instagram-gradient': 'linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%)',
+                        "primary": "#ff5a3d",
+                        "background-light": "#f8f6f5",
+                        "background-dark": "#23120f",
                     },
                     fontFamily: {
                         "display": ["Inter", "sans-serif"]
                     },
                     borderRadius: {
-                        "DEFAULT": "1rem",
-                        "lg": "2rem",
-                        "xl": "3rem",
+                        "DEFAULT": "0.25rem",
+                        "lg": "0.5rem",
+                        "xl": "0.75rem",
                         "full": "9999px"
                     },
                 },
@@ -37,164 +34,158 @@
 <style>
         body {
             font-family: 'Inter', sans-serif;
-            scroll-behavior: smooth;
+            -webkit-font-smoothing: antialiased;
         }
-        .legal-grid {
-            display: grid;
-            grid-template-columns: 240px 1fr;
-            gap: 1.5rem;
-            padding: 1.5rem 0;
-            border-top: 1px solid rgba(80, 72, 229, 0.1);
-        }
-        @media (max-width: 640px) {
-            .legal-grid {
-                grid-template-columns: 1fr;
-                gap: 0.5rem;
-            }
+        @media print {
+            .no-print { display: none; }
+            .print-padding { padding: 0 !important; }
         }
     </style>
 </head>
-<body class="bg-background-light dark:bg-background-dark text-[#0f0e1b] dark:text-slate-200">
-<div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
-<!-- Header -->
-<header class="sticky top-0 z-50 w-full bg-white/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-[#e8e8f3] dark:border-slate-800">
-<div class="max-w-[1200px] mx-auto px-6 lg:px-10 h-16 flex items-center justify-between">
+<body class="bg-background-light dark:bg-background-dark text-[#181210] dark:text-[#f5f0f0] min-h-screen selection:bg-primary/20 selection:text-primary">
+<div class="layout-container flex h-full grow flex-col">
+<!-- Navigation -->
+<header class="flex items-center justify-between border-b border-primary/10 px-6 md:px-20 lg:px-40 py-4 bg-white/80 dark:bg-background-dark/80 backdrop-blur-md sticky top-0 z-50">
 <div class="flex items-center gap-3">
-<div class="size-8 rounded flex items-center justify-center text-white bg-instagram-gradient">
+<div class="size-8 bg-primary rounded flex items-center justify-center text-white">
 <span class="material-symbols-outlined text-xl">grid_view</span>
 </div>
-<h1 class="text-[#0f0e1b] dark:text-white text-lg font-bold tracking-tight">Wallify IG</h1>
+<h2 class="text-[#181210] dark:text-white text-lg font-bold tracking-tight">Wallify IG</h2>
 </div>
-<nav class="hidden md:flex items-center gap-8">
-<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Home</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Gallery</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="about.html">About</a>
+<nav class="flex items-center gap-8">
+<a class="text-sm font-medium hover:text-primary transition-colors" href="index.html">Home</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="features.html">Features</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="pricing.html">Pricing</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="blog.html">Blog</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="docs.html">Docs</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="support.html">Support</a>
 </nav>
-<div class="flex items-center gap-4">
-<button class="flex items-center justify-center rounded-full h-10 px-6 text-white text-sm font-bold transition-transform hover:scale-105 active:scale-95 bg-instagram-gradient">
-                        Back to Home
-                    </button>
-</div>
-</div>
 </header>
-<!-- Main Content -->
-<main class="flex-1 flex flex-col items-center py-12 px-6">
-<div class="max-w-[800px] w-full bg-white dark:bg-slate-900/50 rounded-lg p-8 md:p-12 shadow-sm border border-[#e8e8f3] dark:border-slate-800">
-<!-- Title Section -->
+<!-- Main Content Area -->
+<main class="flex-1 flex flex-col items-center py-12 md:py-20 px-6">
+<div class="max-w-[700px] w-full">
+<!-- Breadcrumbs & Header -->
+<nav class="flex items-center gap-2 mb-8 no-print">
+<a class="text-primary text-sm font-medium flex items-center gap-1 hover:underline" href="index.html">
+<span class="material-symbols-outlined text-xs">arrow_back</span>
+                        Back to Home
+                    </a>
+<span class="text-gray-400 text-sm">/</span>
+<span class="text-gray-500 text-sm">Impressum</span>
+</nav>
 <div class="mb-12">
-<h2 class="text-4xl font-black tracking-tight text-[#0f0e1b] dark:text-white mb-3">Impressum</h2>
-<p class="text-slate-500 dark:text-slate-400 text-lg">Legal Disclosure in accordance with German Law (§ 5 TMG)</p>
-</div>
-<!-- Company Info -->
-<section class="mb-10">
-<div class="flex items-center gap-2 mb-6 cursor-pointer" onclick="window.location.href='index.html'">
-<span class="material-symbols-outlined bg-instagram-gradient bg-clip-text text-transparent">business</span>
-<h3 class="text-xl font-bold">Company Information</h3>
-</div>
-<div class="legal-grid">
-<span class="text-slate-500 dark:text-slate-400 text-sm font-medium uppercase tracking-wider">Legal Entity</span>
-<span class="font-semibold">Wallify IG GmbH</span>
-</div>
-<div class="legal-grid">
-<span class="text-slate-500 dark:text-slate-400 text-sm font-medium uppercase tracking-wider">Registered Office</span>
-<span>Musterstraße 123<br/>10117 Berlin, Germany</span>
-</div>
-<div class="legal-grid">
-<span class="text-slate-500 dark:text-slate-400 text-sm font-medium uppercase tracking-wider">Registration Court</span>
-<span>Amtsgericht Berlin (Charlottenburg)<br/>Registration Number: HRB 123456</span>
-</div>
-<div class="legal-grid">
-<span class="text-slate-500 dark:text-slate-400 text-sm font-medium uppercase tracking-wider">Represented by</span>
-<span class="font-medium">Maximilian Muster, CEO</span>
-</div>
-</section>
-<!-- Contact Details -->
-<section class="mb-10">
-<div class="flex items-center gap-2 mb-6 cursor-pointer" onclick="window.location.href='index.html'">
-<span class="material-symbols-outlined bg-instagram-gradient bg-clip-text text-transparent">contact_support</span>
-<h3 class="text-xl font-bold">Contact Details</h3>
-</div>
-<div class="legal-grid">
-<span class="text-slate-500 dark:text-slate-400 text-sm font-medium uppercase tracking-wider">Phone</span>
-<a class="hover:text-primary transition-colors" href="tel:+493012345678">+49 (0) 30 123 456 78</a>
-</div>
-<div class="legal-grid">
-<span class="text-slate-500 dark:text-slate-400 text-sm font-medium uppercase tracking-wider">Email</span>
-<a class="font-medium hover:underline text-[#E1306C]" href="mailto:legal@wallify-ig.com">legal@wallify-ig.com</a>
-</div>
-<div class="legal-grid">
-<span class="text-slate-500 dark:text-slate-400 text-sm font-medium uppercase tracking-wider">Website</span>
-<a class="hover:text-primary transition-colors" href="#">www.wallify-ig.com</a>
-</div>
-</section>
-<!-- VAT & ID -->
-<section class="mb-10">
-<div class="flex items-center gap-2 mb-6 cursor-pointer" onclick="window.location.href='index.html'">
-<span class="material-symbols-outlined bg-instagram-gradient bg-clip-text text-transparent">receipt_long</span>
-<h3 class="text-xl font-bold">Tax &amp; VAT</h3>
-</div>
-<div class="legal-grid">
-<span class="text-slate-500 dark:text-slate-400 text-sm font-medium uppercase tracking-wider">VAT ID Number</span>
-<span class="font-mono">DE 123 456 789</span>
-</div>
-<div class="p-4 bg-primary/5 rounded border border-primary/10" style="background-color: rgba(225, 48, 108, 0.05); border-color: rgba(225, 48, 108, 0.1);">
-<p class="text-sm text-slate-600 dark:text-slate-400 leading-relaxed italic">
-                            VAT Identification Number according to § 27 a Value Added Tax Act (Umsatzsteuergesetz).
-                        </p>
-</div>
-</section>
-<!-- Responsible Party -->
-<section class="mb-10">
-<div class="flex items-center gap-2 mb-6 cursor-pointer" onclick="window.location.href='index.html'">
-<span class="material-symbols-outlined bg-instagram-gradient bg-clip-text text-transparent">gavel</span>
-<h3 class="text-xl font-bold">Responsible for Content</h3>
-</div>
-<div class="legal-grid border-b border-[#e8e8f3] dark:border-slate-800">
-<span class="text-slate-500 dark:text-slate-400 text-sm font-medium uppercase tracking-wider">Responsible Party</span>
-<div>
-<p class="font-semibold">Maximilian Muster</p>
-<p class="text-sm text-slate-600 dark:text-slate-400 mt-1">Responsible according to § 18 MStV (Medienstaatsvertrag)</p>
-<p class="text-sm text-slate-600 dark:text-slate-400">Musterstraße 123, 10117 Berlin</p>
-</div>
-</div>
-</section>
-<!-- Disclaimer -->
-<section>
-<div class="flex items-center gap-2 mb-4">
-<span class="material-symbols-outlined bg-instagram-gradient bg-clip-text text-transparent">info</span>
-<h3 class="text-xl font-bold">Online Dispute Resolution</h3>
-</div>
-<p class="text-sm text-slate-600 dark:text-slate-400 leading-relaxed">
-                        The European Commission provides a platform for online dispute resolution (OS), which you can find here: 
-                        <a class="hover:underline text-[#E1306C]" href="https://ec.europa.eu/consumers/odr" rel="noopener noreferrer" target="_blank">https://ec.europa.eu/consumers/odr</a>. 
-                        We are not obligated or willing to participate in dispute resolution proceedings before a consumer arbitration board.
+<h1 class="text-5xl md:text-6xl font-black tracking-tighter mb-4 text-[#181210] dark:text-white">
+                        Impressum<span class="text-primary">.</span>
+</h1>
+<p class="text-lg text-gray-500 dark:text-gray-400 font-normal border-l-2 border-primary pl-4 py-1">
+                        Legal Disclosure and Official Company Information in accordance with § 5 TMG.
                     </p>
+</div>
+<!-- Engineered Grid List -->
+<section class="space-y-0 border-t border-primary/10">
+<!-- Item -->
+<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+<div class="md:w-1/3 mb-1 md:mb-0">
+<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Company Name</span>
+</div>
+<div class="md:w-2/3">
+<p class="text-lg font-semibold text-[#181210] dark:text-white">Wallify IG Media Solutions GmbH</p>
+</div>
+</div>
+<!-- Item -->
+<div class="group flex flex-col md:flex-row md:items-start py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+<div class="md:w-1/3 mb-1 md:mb-0 pt-1">
+<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Address</span>
+</div>
+<div class="md:w-2/3">
+<p class="text-base leading-relaxed text-[#181210] dark:text-white">
+                                Tech Avenue 42, Floor 8<br/>
+                                Silicon District<br/>
+                                10117 Berlin, Germany
+                            </p>
+<a class="inline-flex items-center gap-1 mt-2 text-xs font-medium text-primary hover:underline no-print" href="#">
+<span class="material-symbols-outlined text-sm">location_on</span> View on Map
+                            </a>
+</div>
+</div>
+<!-- Item -->
+<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+<div class="md:w-1/3 mb-1 md:mb-0">
+<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Contact</span>
+</div>
+<div class="md:w-2/3 space-y-1">
+<div class="flex items-center gap-2">
+<span class="material-symbols-outlined text-primary text-sm">mail</span>
+<a class="text-base font-medium hover:text-primary transition-colors underline decoration-primary/20 underline-offset-4" href="mailto:legal@wallifyig.com">legal@wallifyig.com</a>
+</div>
+<div class="flex items-center gap-2">
+<span class="material-symbols-outlined text-primary text-sm">call</span>
+<a class="text-base font-medium hover:text-primary transition-colors" href="tel:+493012345678">+49 30 12345678</a>
+</div>
+</div>
+</div>
+<!-- Item -->
+<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+<div class="md:w-1/3 mb-1 md:mb-0">
+<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Legal Registry</span>
+</div>
+<div class="md:w-2/3">
+<p class="text-base text-[#181210] dark:text-white">Amtsgericht Charlottenburg (Berlin), HRB 123456 B</p>
+</div>
+</div>
+<!-- Item -->
+<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+<div class="md:w-1/3 mb-1 md:mb-0">
+<span class="text-xs font-bold uppercase tracking-widest text-primary/60">VAT Identification</span>
+</div>
+<div class="md:w-2/3">
+<p class="text-base font-mono text-[#181210] dark:text-white">DE 123 456 789</p>
+</div>
+</div>
+<!-- Item -->
+<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+<div class="md:w-1/3 mb-1 md:mb-0">
+<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Managing Director</span>
+</div>
+<div class="md:w-2/3">
+<p class="text-base font-semibold text-[#181210] dark:text-white">Jane Doe</p>
+<p class="text-xs text-gray-400">Authorized representative</p>
+</div>
+</div>
+<!-- Item -->
+<div class="group flex flex-col md:flex-row md:items-start py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+<div class="md:w-1/3 mb-1 md:mb-0 pt-1">
+<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Content Responsible</span>
+</div>
+<div class="md:w-2/3">
+<p class="text-base text-[#181210] dark:text-white">Marcus Vane</p>
+<p class="text-xs text-gray-400 mt-1">Responsible for content according to § 18 MStV</p>
+</div>
+</div>
 </section>
-</div>
-</main>
-<!-- Footer -->
-<footer class="w-full bg-white dark:bg-slate-900 border-t border-[#e8e8f3] dark:border-slate-800 py-12 mt-12">
-<div class="max-w-[1200px] mx-auto px-10 flex flex-col md:flex-row justify-between items-center gap-8 text-sm text-slate-500">
-<div class="flex items-center gap-4">
-<div class="size-6 bg-slate-200 dark:bg-slate-700 rounded flex items-center justify-center">
-<span class="material-symbols-outlined text-xs">grid_view</span>
-</div>
-<span>© 2024 Wallify IG GmbH. All rights reserved.</span>
-</div>
-<div class="flex items-center gap-8">
-<a class="hover:text-primary transition-colors" href="impressum.html">Privacy Policy</a>
-<a class="hover:text-primary transition-colors" href="#">Terms of Service</a>
-<a class="font-bold" href="#">Impressum</a>
-</div>
-<div class="flex gap-4">
-<a class="size-9 rounded-full bg-slate-100 dark:bg-slate-800 flex items-center justify-center hover:bg-primary/10 transition-colors" href="#">
-<span class="material-symbols-outlined text-lg">share</span>
-</a>
-<a class="size-9 rounded-full bg-slate-100 dark:bg-slate-800 flex items-center justify-center hover:bg-primary/10 transition-colors" href="#">
-<span class="material-symbols-outlined text-lg">alternate_email</span>
-</a>
-</div>
+<!-- Footer Disclaimer -->
+<footer class="mt-16 pt-8 border-t border-primary/5 text-center">
+<p class="text-xs text-gray-400 dark:text-gray-500 uppercase tracking-widest mb-6">Online Dispute Resolution</p>
+<p class="text-sm text-gray-500 dark:text-gray-400 leading-relaxed mb-8">
+                        The European Commission provides a platform for online dispute resolution (OS), which you can find here: 
+                        <a class="text-primary hover:underline" href="https://ec.europa.eu/consumers/odr" target="_blank">https://ec.europa.eu/consumers/odr</a>. 
+                        We are not obligated and unwilling to participate in a dispute resolution procedure before a consumer arbitration board.
+                    </p>
+<div class="flex justify-center gap-4 no-print">
+<button class="flex items-center gap-2 px-4 py-2 rounded-lg bg-white dark:bg-white/5 border border-primary/10 text-xs font-bold uppercase tracking-tighter hover:bg-primary hover:text-white hover:border-primary transition-all" onclick="window.print()">
+<span class="material-symbols-outlined text-sm">print</span> Print Page
+                        </button>
 </div>
 </footer>
+</div>
+</main>
+<!-- Bottom Signature -->
+<div class="py-10 flex flex-col items-center justify-center border-t border-primary/10 bg-white/50 dark:bg-black/20">
+<div class="flex items-center gap-2 mb-2 opacity-30 grayscale">
+<div class="size-4 bg-[#181210] dark:bg-white rounded-sm"></div>
+<span class="text-xs font-black tracking-tight">Wallify IG</span>
+</div>
+<p class="text-[10px] uppercase tracking-[0.2em] text-gray-400 font-medium">© 2024. All legal rights reserved.</p>
+</div>
 </div>
 </body></html>
