--- a/pricing.html
+++ b/pricing.html
@@ -38,31 +38,7 @@
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-100 font-display transition-colors duration-300">
-<!-- Header -->
-<header class="sticky top-0 z-50 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-primary/10">
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<div class="flex justify-between items-center h-16">
-<div class="flex items-center gap-2">
-<div class="w-8 h-8 bg-primary rounded flex items-center justify-center">
-<span class="material-icons text-white text-xl">wallpaper</span>
-</div>
-<span class="text-xl font-bold tracking-tight">Wallify<span class="text-primary">IG</span></span>
-</div>
-<nav class="hidden md:flex space-x-8 text-sm font-medium">
-<a class="hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="hover:text-primary transition-colors" href="features.html">Features</a>
-<a class="text-primary" href="pricing.html">Pricing</a>
-<a class="hover:text-primary transition-colors" href="blog.html">Blog</a>
-<a class="hover:text-primary transition-colors" href="docs.html">Docs</a>
-<a class="hover:text-primary transition-colors" href="support.html">Support</a>
-</nav>
-<div class="flex items-center gap-4">
-<button class="text-sm font-medium hover:text-primary px-4 py-2">Sign In</button>
-<button class="bg-primary text-white text-sm font-medium px-5 py-2 rounded-lg hover:brightness-110 transition-all shadow-sm">Get Started</button>
-</div>
-</div>
-</div>
-</header>
+<div id="site-header"></div>
 <main>
 <!-- Hero Section & Toggle -->
 <section class="py-16 px-4">
@@ -294,66 +270,6 @@
 </div>
 </section>
 </main>
-<!-- Footer -->
-<footer class="bg-white dark:bg-zinc-950 border-t border-slate-200 dark:border-zinc-800 pt-16 pb-8">
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-8 mb-16">
-<div class="col-span-2">
-<div class="flex items-center gap-2 mb-6">
-<div class="w-6 h-6 bg-primary rounded flex items-center justify-center">
-<span class="material-icons text-white text-xs">wallpaper</span>
-</div>
-<span class="text-lg font-bold">Wallify<span class="text-primary">IG</span></span>
-</div>
-<p class="text-slate-500 text-sm max-w-xs mb-6">
-                        Engineered tools for the modern digital creator. Aesthetic precision at scale.
-                    </p>
-<div class="flex gap-4">
-<a class="w-8 h-8 rounded-full border border-slate-200 dark:border-zinc-800 flex items-center justify-center text-slate-400 hover:text-primary hover:border-primary transition-all" href="#">
-<i class="material-icons text-sm">share</i>
-</a>
-<a class="w-8 h-8 rounded-full border border-slate-200 dark:border-zinc-800 flex items-center justify-center text-slate-400 hover:text-primary hover:border-primary transition-all" href="#">
-<i class="material-icons text-sm">public</i>
-</a>
-<a class="w-8 h-8 rounded-full border border-slate-200 dark:border-zinc-800 flex items-center justify-center text-slate-400 hover:text-primary hover:border-primary transition-all" href="#">
-<i class="material-icons text-sm">alternate_email</i>
-</a>
-</div>
-</div>
-<div>
-<h4 class="font-bold text-sm mb-6 uppercase tracking-wider">Product</h4>
-<ul class="space-y-4 text-sm text-slate-500">
-<li><a class="hover:text-primary transition-colors" href="features.html">Features</a></li>
-<li><a class="hover:text-primary transition-colors" href="docs.html">API Docs</a></li>
-<li><a class="hover:text-primary transition-colors" href="#">Integrations</a></li>
-<li><a class="hover:text-primary transition-colors" href="#">Templates</a></li>
-</ul>
-</div>
-<div>
-<h4 class="font-bold text-sm mb-6 uppercase tracking-wider">Company</h4>
-<ul class="space-y-4 text-sm text-slate-500">
-<li><a class="hover:text-primary transition-colors" href="#">About Us</a></li>
-<li><a class="hover:text-primary transition-colors" href="#">Careers</a></li>
-<li><a class="hover:text-primary transition-colors" href="blog.html">Blog</a></li>
-<li><a class="hover:text-primary transition-colors" href="#">Press Kit</a></li>
-</ul>
-</div>
-<div>
-<h4 class="font-bold text-sm mb-6 uppercase tracking-wider">Legal</h4>
-<ul class="space-y-4 text-sm text-slate-500">
-<li><a class="hover:text-primary transition-colors" href="privacy.html">Privacy Policy</a></li>
-<li><a class="hover:text-primary transition-colors" href="#">Terms of Use</a></li>
-<li><a class="hover:text-primary transition-colors" href="#">Cookie Policy</a></li>
-</ul>
-</div>
-</div>
-<div class="pt-8 border-t border-slate-100 dark:border-zinc-900 flex flex-col md:flex-row justify-between items-center gap-4 text-xs text-slate-400">
-<p>© 2024 Wallify IG Inc. All rights reserved.</p>
-<div class="flex items-center gap-6">
-<span>Status: All Systems Operational</span>
-<span>English (US)</span>
-</div>
-</div>
-</div>
-</footer>
+<div id="site-footer"></div>
+<script src="components.js"></script>
 </body></html>
