--- a/blog.html
+++ b/blog.html
@@ -45,36 +45,7 @@
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark text-[#181210] dark:text-white transition-colors duration-300">
-<!-- Global Navigation -->
-<header class="sticky top-0 z-50 w-full bg-white/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-[#f5f0f0] dark:border-white/10">
-<div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
-<div class="flex items-center gap-10">
-<a class="flex items-center gap-2 group" href="#">
-<div class="size-8 bg-primary text-white flex items-center justify-center rounded-lg shadow-sm">
-<span class="material-symbols-outlined text-xl">grid_view</span>
-</div>
-<h1 class="text-xl font-extrabold tracking-tight text-[#181210] dark:text-white">Wallify IG</h1>
-</a>
-<nav class="hidden md:flex items-center gap-8">
-<a class="text-sm font-semibold text-[#181210]/70 dark:text-white/70 hover:text-primary dark:hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="text-sm font-semibold text-[#181210]/70 dark:text-white/70 hover:text-primary dark:hover:text-primary transition-colors" href="features.html">Features</a>
-<a class="text-sm font-semibold text-[#181210]/70 dark:text-white/70 hover:text-primary dark:hover:text-primary transition-colors" href="pricing.html">Pricing</a>
-<a class="text-sm font-semibold text-primary border-b-2 border-primary transition-colors" href="blog.html">Blog</a>
-<a class="text-sm font-semibold text-[#181210]/70 dark:text-white/70 hover:text-primary dark:hover:text-primary transition-colors" href="docs.html">Docs</a>
-<a class="text-sm font-semibold text-[#181210]/70 dark:text-white/70 hover:text-primary dark:hover:text-primary transition-colors" href="support.html">Support</a>
-</nav>
-</div>
-<div class="flex items-center gap-6">
-<div class="hidden lg:flex items-center bg-[#f5f0f0] dark:bg-white/5 rounded-full px-4 py-2 gap-2">
-<span class="material-symbols-outlined text-[#8d655e] dark:text-white/50 text-xl">search</span>
-<input class="bg-transparent border-none focus:ring-0 text-sm placeholder-[#8d655e] dark:placeholder-white/30 w-40" placeholder="Search articles..." type="text"/>
-</div>
-<button class="bg-primary hover:bg-primary/90 text-white px-6 py-2.5 rounded-full text-sm font-bold transition-all shadow-md shadow-primary/20">
-                    Get Started
-                </button>
-</div>
-</div>
-</header>
+<div id="site-header"></div>
 <main>
 <!-- Category Filters -->
 <section class="max-w-7xl mx-auto px-6 py-8">
@@ -255,62 +226,6 @@
 </div>
 </section>
 </main>
-<!-- Global Footer -->
-<footer class="bg-white dark:bg-background-dark border-t border-[#f5f0f0] dark:border-white/10 pt-20 pb-10">
-<div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-12 mb-20">
-<div class="lg:col-span-2 space-y-6">
-<div class="flex items-center gap-2">
-<div class="size-8 bg-primary text-white flex items-center justify-center rounded-lg">
-<span class="material-symbols-outlined text-xl">grid_view</span>
-</div>
-<h2 class="text-xl font-extrabold tracking-tight">Wallify IG</h2>
-</div>
-<p class="text-[#181210]/60 dark:text-white/60 max-w-sm">
-                    The highest-rated Instagram feed app for Shopify. Helping over 5,000+ merchants convert social engagement into sales.
-                </p>
-<div class="flex items-center gap-4">
-<a class="size-8 rounded-full bg-[#f5f0f0] dark:bg-white/5 flex items-center justify-center hover:text-primary transition-colors" href="#">
-<svg class="size-4" fill="currentColor" viewbox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg>
-</a>
-<a class="size-8 rounded-full bg-[#f5f0f0] dark:bg-white/5 flex items-center justify-center hover:text-primary transition-colors" href="#">
-<svg class="size-4" fill="currentColor" viewbox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"></path></svg>
-</a>
-</div>
-</div>
-<div>
-<h4 class="font-bold mb-6">Product</h4>
-<ul class="space-y-4 text-sm text-[#181210]/60 dark:text-white/60">
-<li><a class="hover:text-primary transition-colors" href="features.html">Features</a></li>
-<li><a class="hover:text-primary transition-colors" href="pricing.html">Pricing</a></li>
-<li><a class="hover:text-primary transition-colors" href="features.html">Showcase</a></li>
-<li><a class="hover:text-primary transition-colors" href="#">Affiliate Program</a></li>
-</ul>
-</div>
-<div>
-<h4 class="font-bold mb-6">Resources</h4>
-<ul class="space-y-4 text-sm text-[#181210]/60 dark:text-white/60">
-<li><a class="hover:text-primary transition-colors" href="blog.html">Blog</a></li>
-<li><a class="hover:text-primary transition-colors" href="support.html">Help Center</a></li>
-<li><a class="hover:text-primary transition-colors" href="docs.html">Developers</a></li>
-<li><a class="hover:text-primary transition-colors" href="docs.html">API Docs</a></li>
-</ul>
-</div>
-<div>
-<h4 class="font-bold mb-6">Company</h4>
-<ul class="space-y-4 text-sm text-[#181210]/60 dark:text-white/60">
-<li><a class="hover:text-primary transition-colors" href="#">About Us</a></li>
-<li><a class="hover:text-primary transition-colors" href="#">Careers</a></li>
-<li><a class="hover:text-primary transition-colors" href="privacy.html">Privacy Policy</a></li>
-<li><a class="hover:text-primary transition-colors" href="#">Terms of Service</a></li>
-</ul>
-</div>
-</div>
-<div class="max-w-7xl mx-auto px-6 pt-10 border-t border-[#f5f0f0] dark:border-white/10 flex flex-col sm:flex-row justify-between items-center gap-6">
-<p class="text-xs text-[#181210]/40 dark:text-white/40">© 2024 Wallify IG. All rights reserved.</p>
-<div class="flex items-center gap-4 grayscale opacity-50">
-<div class="h-6 w-20 bg-gray-200 dark:bg-white/10 rounded"></div>
-<div class="h-6 w-20 bg-gray-200 dark:bg-white/10 rounded"></div>
-</div>
-</div>
-</footer>
+<div id="site-footer"></div>
+<script src="components.js"></script>
 </body></html>
