--- a/impressum.html
+++ b/impressum.html
@@ -44,23 +44,7 @@
 </head>
 <body class="bg-background-light dark:bg-background-dark text-[#181210] dark:text-[#f5f0f0] min-h-screen selection:bg-primary/20 selection:text-primary">
 <div class="layout-container flex h-full grow flex-col">
-<!-- Navigation -->
-<header class="flex items-center justify-between border-b border-primary/10 px-6 md:px-20 lg:px-40 py-4 bg-white/80 dark:bg-background-dark/80 backdrop-blur-md sticky top-0 z-50">
-<div class="flex items-center gap-3">
-<div class="size-8 bg-primary rounded flex items-center justify-center text-white">
-<span class="material-symbols-outlined text-xl">grid_view</span>
-</div>
-<h2 class="text-[#181210] dark:text-white text-lg font-bold tracking-tight">Wallify IG</h2>
-</div>
-<nav class="flex items-center gap-8">
-<a class="text-sm font-medium hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="features.html">Features</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="pricing.html">Pricing</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="blog.html">Blog</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="docs.html">Docs</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="support.html">Support</a>
-</nav>
-</header>
+<div id="site-header"></div>
 <!-- Main Content Area -->
 <main class="flex-1 flex flex-col items-center py-12 md:py-20 px-6">
 <div class="max-w-[700px] w-full">
@@ -179,13 +163,7 @@
 </footer>
 </div>
 </main>
-<!-- Bottom Signature -->
-<div class="py-10 flex flex-col items-center justify-center border-t border-primary/10 bg-white/50 dark:bg-black/20">
-<div class="flex items-center gap-2 mb-2 opacity-30 grayscale">
-<div class="size-4 bg-[#181210] dark:bg-white rounded-sm"></div>
-<span class="text-xs font-black tracking-tight">Wallify IG</span>
+<div id="site-footer"></div>
 </div>
-<p class="text-[10px] uppercase tracking-[0.2em] text-gray-400 font-medium">© 2024. All legal rights reserved.</p>
-</div>
-</div>
+<script src="components.js"></script>
 </body></html>
