--- a/index.html
+++ b/index.html
@@ -41,30 +41,7 @@
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark text-[#181210] selection:bg-primary selection:text-white">
-<!-- Header -->
-<header class="sticky top-0 z-50 w-full border-b border-primary/10 bg-white/80 backdrop-blur-md">
-<div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
-<div class="flex items-center gap-2">
-<div class="size-8 bg-primary rounded flex items-center justify-center text-white">
-<span class="material-symbols-outlined text-xl">grid_view</span>
-</div>
-<h2 class="text-[#181210] text-xl font-extrabold tracking-tight">Wallify IG</h2>
-</div>
-<nav class="hidden md:flex items-center gap-10">
-<a class="text-sm font-semibold hover:text-primary transition-colors" href="features.html">Features</a>
-<a class="text-sm font-semibold hover:text-primary transition-colors" href="pricing.html">Pricing</a>
-<a class="text-sm font-semibold hover:text-primary transition-colors" href="blog.html">Blog</a>
-<a class="text-sm font-semibold hover:text-primary transition-colors" href="docs.html">Docs</a>
-<a class="text-sm font-semibold hover:text-primary transition-colors" href="support.html">Support</a>
-</nav>
-<div class="flex items-center gap-4">
-<button class="hidden sm:block text-sm font-bold px-4 py-2 hover:bg-primary/5 rounded-lg transition-colors">Login</button>
-<button class="bg-primary hover:bg-primary/90 text-white text-sm font-bold px-6 py-2.5 rounded-lg transition-all shadow-lg shadow-primary/20">
-                    Get Started
-                </button>
-</div>
-</div>
-</header>
+<div id="site-header"></div>
 <!-- Hero Section -->
 <section class="relative pt-20 pb-32 overflow-hidden">
 <div class="max-w-7xl mx-auto px-6 grid lg:grid-cols-2 gap-16 items-center">
@@ -448,62 +425,6 @@
 </div>
 </div>
 </section>
-<!-- Footer -->
-<footer class="bg-white border-t border-[#e7dcda] py-16">
-<div class="max-w-7xl mx-auto px-6">
-<div class="grid md:grid-cols-4 gap-12 mb-16">
-<div class="col-span-1 md:col-span-1 space-y-6">
-<div class="flex items-center gap-2">
-<div class="size-6 bg-primary rounded flex items-center justify-center text-white">
-<span class="material-symbols-outlined text-sm">grid_view</span>
-</div>
-<h2 class="text-[#181210] text-lg font-bold tracking-tight">Wallify IG</h2>
-</div>
-<p class="text-sm text-[#8d655e] leading-relaxed">
-                        The premium Instagram shoppable wall app for Shopify merchants who care about speed and conversion.
-                    </p>
-<div class="flex gap-4">
-<span class="material-symbols-outlined text-[#8d655e] cursor-pointer hover:text-primary transition-colors">brand_awareness</span>
-<span class="material-symbols-outlined text-[#8d655e] cursor-pointer hover:text-primary transition-colors">share</span>
-<span class="material-symbols-outlined text-[#8d655e] cursor-pointer hover:text-primary transition-colors">public</span>
-</div>
-</div>
-<div>
-<h4 class="font-bold mb-6">Product</h4>
-<ul class="space-y-4 text-sm text-[#8d655e] font-medium">
-<li><a class="hover:text-primary" href="features.html">Features</a></li>
-<li><a class="hover:text-primary" href="features.html">Showcase</a></li>
-<li><a class="hover:text-primary" href="#">Performance</a></li>
-<li><a class="hover:text-primary" href="pricing.html">Pricing</a></li>
-</ul>
-</div>
-<div>
-<h4 class="font-bold mb-6">Company</h4>
-<ul class="space-y-4 text-sm text-[#8d655e] font-medium">
-<li><a class="hover:text-primary" href="#">About Us</a></li>
-<li><a class="hover:text-primary" href="blog.html">Blog</a></li>
-<li><a class="hover:text-primary" href="#">Careers</a></li>
-<li><a class="hover:text-primary" href="support.html">Contact</a></li>
-</ul>
-</div>
-<div>
-<h4 class="font-bold mb-6">Support</h4>
-<ul class="space-y-4 text-sm text-[#8d655e] font-medium">
-<li><a class="hover:text-primary" href="support.html">Help Center</a></li>
-<li><a class="hover:text-primary" href="docs.html">API Docs</a></li>
-<li><a class="hover:text-primary" href="#">Status</a></li>
-<li><a class="hover:text-primary" href="privacy.html">Privacy Policy</a></li>
-</ul>
-</div>
-</div>
-<div class="pt-8 border-t border-[#f5f0f0] flex flex-col md:flex-row justify-between items-center gap-4">
-<p class="text-xs font-bold text-[#8d655e] uppercase tracking-widest">© 2024 Wallify IG. Built by merchants, for merchants.</p>
-<div class="flex gap-8 text-xs font-bold text-[#8d655e] uppercase tracking-widest">
-<a class="hover:text-primary transition-colors" href="#">Terms</a>
-<a class="hover:text-primary transition-colors" href="privacy.html">Privacy</a>
-<a class="hover:text-primary transition-colors" href="#">Cookies</a>
-</div>
-</div>
-</div>
-</footer>
+<div id="site-footer"></div>
+<script src="components.js"></script>
 </body></html>
