--- a/privacy.html
+++ b/privacy.html
@@ -42,38 +42,7 @@
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark text-[#181210] font-display">
-<!-- Top Navigation Bar -->
-<header class="sticky top-0 z-50 w-full bg-white/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-[#f5f0f0] dark:border-[#3d2a27]">
-<div class="max-w-[1200px] mx-auto px-6 h-16 flex items-center justify-between">
-<div class="flex items-center gap-8">
-<div class="flex items-center gap-3">
-<div class="text-primary">
-<svg class="size-6" fill="currentColor" viewbox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-<path d="M44 4H30.6666V17.3334H17.3334V30.6666H4V44H44V4Z"></path>
-</svg>
-</div>
-<span class="text-xl font-bold tracking-tight">Wallify IG</span>
-</div>
-<nav class="hidden md:flex items-center gap-6">
-<a class="text-sm font-medium hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="features.html">Features</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="pricing.html">Pricing</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="blog.html">Blog</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="docs.html">Docs</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="support.html">Support</a>
-</nav>
-</div>
-<div class="flex items-center gap-4">
-<div class="relative hidden sm:block">
-<span class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-[#8d655e] text-lg">search</span>
-<input class="bg-[#f5f0f0] dark:bg-[#3d2a27] border-none rounded-lg pl-10 pr-4 py-2 text-sm focus:ring-2 focus:ring-primary/50 w-64" placeholder="Search legal docs..." type="text"/>
-</div>
-<button class="bg-primary text-white px-5 py-2 rounded-lg text-sm font-bold hover:opacity-90 transition-opacity">
-                    Sign In
-                </button>
-</div>
-</div>
-</header>
+<div id="site-header"></div>
 <main class="max-w-[1200px] mx-auto px-6 py-12">
 <div class="flex flex-col lg:flex-row gap-12">
 <!-- Left Sidebar Navigation (Sticky) -->
@@ -282,4 +251,6 @@
 <a class="fixed bottom-8 right-8 size-12 bg-primary text-white rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition-transform z-50" href="#">
 <span class="material-symbols-outlined">arrow_upward</span>
 </a>
+<div id="site-footer"></div>
+<script src="components.js"></script>
 </body></html>
