--- a/support.html
+++ b/support.html
@@ -43,26 +43,7 @@
 <body class="bg-background-light dark:bg-background-dark text-[#181210] dark:text-white transition-colors duration-300">
 <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
 <div class="layout-container flex h-full grow flex-col">
-<!-- Top Navigation Bar -->
-<header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-primary/10 px-6 py-4 lg:px-20 bg-white dark:bg-background-dark/50 backdrop-blur-md sticky top-0 z-50">
-<div class="flex items-center gap-3">
-<div class="size-8 bg-primary rounded flex items-center justify-center text-white">
-<span class="material-symbols-outlined">wallpaper</span>
-</div>
-<h2 class="text-[#181210] dark:text-white text-xl font-bold leading-tight tracking-tight">Wallify IG</h2>
-</div>
-<nav class="hidden md:flex flex-1 justify-center gap-10">
-<a class="text-[#181210] dark:text-white/80 text-sm font-semibold hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="text-[#181210] dark:text-white/80 text-sm font-semibold hover:text-primary transition-colors" href="features.html">Features</a>
-<a class="text-[#181210] dark:text-white/80 text-sm font-semibold hover:text-primary transition-colors" href="pricing.html">Pricing</a>
-<a class="text-[#181210] dark:text-white/80 text-sm font-semibold hover:text-primary transition-colors" href="blog.html">Blog</a>
-<a class="text-[#181210] dark:text-white/80 text-sm font-semibold hover:text-primary transition-colors" href="docs.html">Docs</a>
-<a class="text-[#181210] dark:text-white/80 text-sm font-semibold text-primary transition-colors" href="support.html">Support</a>
-</nav>
-<div class="flex items-center gap-4">
-<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10 ring-2 ring-primary/20" data-alt="User profile avatar circle" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuD3-zgSWRmYXhr00ssmBMblWVqqMEN29qa50PzZbBFVT8K_T2LVeN7MSPMtJ-yQRovzw4qZEsLIJB5AgBY-AdhOCEdh1sFj1zyLAI8elaS7MfD2PQTGiHVohrHt8V_D6WxHkMj-YV2O6rAcgsNTfxYvKscHbt6WO6BZ0NPiUHD7p16fc4C8gVIjmGqbP6a7Q1k3XQfHp0gPxXC3SanTRySjQlxIbkvbZn0FXw-iBxEg1iSRFeRANHTTiLZ9enhbrjFnLbi8Gkxxhgk");'></div>
-</div>
-</header>
+<div id="site-header"></div>
 <main class="flex-1 max-w-5xl mx-auto w-full px-6 py-12">
 <!-- Hero Search Section -->
 <section class="text-center mb-16">
@@ -209,30 +190,8 @@
 </div>
 </section>
 </main>
-<!-- Footer -->
-<footer class="border-t border-primary/10 py-12 px-6 bg-white dark:bg-background-dark/80">
-<div class="max-w-5xl mx-auto flex flex-col md:flex-row justify-between items-center gap-8">
-<div class="flex items-center gap-2 opacity-50">
-<div class="size-6 bg-primary rounded flex items-center justify-center text-white">
-<span class="material-symbols-outlined text-xs">wallpaper</span>
-</div>
-<span class="text-sm font-bold">Wallify IG © 2024</span>
-</div>
-<div class="flex gap-8">
-<a class="text-sm text-[#8d655e] hover:text-primary transition-colors" href="privacy.html">Privacy Policy</a>
-<a class="text-sm text-[#8d655e] hover:text-primary transition-colors" href="#">Terms of Service</a>
-<a class="text-sm text-[#8d655e] hover:text-primary transition-colors" href="#">Cookies</a>
-</div>
-<div class="flex gap-4">
-<div class="size-8 rounded-full border border-primary/20 flex items-center justify-center text-primary cursor-pointer hover:bg-primary/5 transition-colors">
-<span class="material-symbols-outlined text-sm">public</span>
-</div>
-<div class="size-8 rounded-full border border-primary/20 flex items-center justify-center text-primary cursor-pointer hover:bg-primary/5 transition-colors">
-<span class="material-symbols-outlined text-sm">alternate_email</span>
+<div id="site-footer"></div>
 </div>
 </div>
-</div>
-</footer>
-</div>
-</div>
+<script src="components.js"></script>
 </body></html>
