--- a/support.html
+++ b/support.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 
-<html class="light" lang="en"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Wallify IG | Support &amp; Help Center</title>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<script id="tailwind-config">
+<html class="scroll-smooth" lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Wallify IG | Support</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+    <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
             theme: {
@@ -31,167 +35,140 @@
             },
         }
     </script>
-<style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
+    <style>
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
         }
+
+        body {
+            font-family: 'Inter', sans-serif;
+        }
     </style>
 </head>
-<body class="bg-background-light dark:bg-background-dark text-[#181210] dark:text-white transition-colors duration-300">
-<div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
-<div class="layout-container flex h-full grow flex-col">
-<div id="site-header"></div>
-<main class="flex-1 max-w-5xl mx-auto w-full px-6 py-12">
-<!-- Hero Search Section -->
-<section class="text-center mb-16">
-<div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-green-100 dark:bg-green-900/30 text-green-700 dark:text-green-400 text-xs font-bold mb-6">
-<span class="relative flex h-2 w-2">
-<span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
-<span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
-</span>
-                        ALL SYSTEMS OPERATIONAL
+
+<body class="bg-white text-[#1a1c1d] selection:bg-primary selection:text-white">
+    <div id="site-header"></div>
+    <main>
+        <!-- Support Hero -->
+        <section class="pt-32 pb-20 px-6 bg-[#f9fafb]">
+            <div class="max-w-4xl mx-auto text-center space-y-8">
+                <h1 class="text-5xl md:text-6xl font-black tracking-tight">How can we <br /><span
+                        class="text-primary">help?</span></h1>
+                <p class="text-xl text-[#5c5f62] max-w-2xl mx-auto font-medium">
+                    Search our knowledge base or get in touch with our team of Shopify experts.
+                </p>
+                <div class="max-w-2xl mx-auto relative group">
+                    <div class="absolute inset-y-0 left-6 flex items-center pointer-events-none text-[#919eab]">
+                        <span class="material-symbols-outlined">search</span>
                     </div>
-<h1 class="text-[#181210] dark:text-white text-4xl md:text-5xl font-black leading-tight tracking-tight mb-4">How can we help you?</h1>
-<p class="text-[#8d655e] dark:text-primary/60 text-lg font-normal mb-10 max-w-2xl mx-auto">Search our knowledge base for quick answers or browse categories below to find what you're looking for.</p>
-<div class="max-w-2xl mx-auto relative group">
-<div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none text-primary">
-<span class="material-symbols-outlined">search</span>
-</div>
-<input class="w-full h-14 pl-12 pr-4 bg-white dark:bg-background-dark border-2 border-primary/10 rounded-xl focus:border-primary focus:ring-4 focus:ring-primary/10 transition-all outline-none text-[#181210] dark:text-white placeholder:text-[#8d655e]/50" placeholder="Search for articles (e.g. how to link Instagram account)..." type="text"/>
-</div>
-</section>
-<!-- Knowledge Base Categories -->
-<section class="mb-20">
-<div class="flex items-center justify-between mb-8">
-<h2 class="text-2xl font-bold tracking-tight">Browse Categories</h2>
-<a class="text-primary font-semibold text-sm flex items-center gap-1 hover:underline" href="#">
-                            View All <span class="material-symbols-outlined text-sm">arrow_forward</span>
-</a>
-</div>
-<div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-<!-- Setup -->
-<div class="group p-8 bg-white dark:bg-background-dark/40 rounded-xl border border-primary/5 hover:border-primary/20 shadow-sm hover:shadow-md transition-all">
-<div class="size-14 bg-primary/10 text-primary rounded-lg flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
-<span class="material-symbols-outlined text-3xl">settings_input_component</span>
-</div>
-<h3 class="text-xl font-bold mb-2">Setup</h3>
-<p class="text-[#8d655e] dark:text-white/60 text-sm leading-relaxed mb-6">Initial configuration, account linking, and device synchronization guides.</p>
-<ul class="space-y-3">
-<li class="flex items-center gap-2 text-sm font-medium text-primary hover:underline cursor-pointer">
-<span class="material-symbols-outlined text-xs">description</span> Linking your IG account
-                                </li>
-<li class="flex items-center gap-2 text-sm font-medium text-primary hover:underline cursor-pointer">
-<span class="material-symbols-outlined text-xs">description</span> Device compatibility list
-                                </li>
-</ul>
-</div>
-<!-- Sync -->
-<div class="group p-8 bg-white dark:bg-background-dark/40 rounded-xl border border-primary/5 hover:border-primary/20 shadow-sm hover:shadow-md transition-all">
-<div class="size-14 bg-primary/10 text-primary rounded-lg flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
-<span class="material-symbols-outlined text-3xl">sync</span>
-</div>
-<h3 class="text-xl font-bold mb-2">Sync</h3>
-<p class="text-[#8d655e] dark:text-white/60 text-sm leading-relaxed mb-6">Troubleshooting feed updates, refresh intervals, and connection issues.</p>
-<ul class="space-y-3">
-<li class="flex items-center gap-2 text-sm font-medium text-primary hover:underline cursor-pointer">
-<span class="material-symbols-outlined text-xs">description</span> Fixing sync delays
-                                </li>
-<li class="flex items-center gap-2 text-sm font-medium text-primary hover:underline cursor-pointer">
-<span class="material-symbols-outlined text-xs">description</span> Refreshing feed manually
-                                </li>
-</ul>
-</div>
-<!-- Billing -->
-<div class="group p-8 bg-white dark:bg-background-dark/40 rounded-xl border border-primary/5 hover:border-primary/20 shadow-sm hover:shadow-md transition-all">
-<div class="size-14 bg-primary/10 text-primary rounded-lg flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
-<span class="material-symbols-outlined text-3xl">payments</span>
-</div>
-<h3 class="text-xl font-bold mb-2">Billing</h3>
-<p class="text-[#8d655e] dark:text-white/60 text-sm leading-relaxed mb-6">Manage your subscriptions, update payment methods, and download invoices.</p>
-<ul class="space-y-3">
-<li class="flex items-center gap-2 text-sm font-medium text-primary hover:underline cursor-pointer">
-<span class="material-symbols-outlined text-xs">description</span> Upgrade your plan
-                                </li>
-<li class="flex items-center gap-2 text-sm font-medium text-primary hover:underline cursor-pointer">
-<span class="material-symbols-outlined text-xs">description</span> Refund policy
-                                </li>
-</ul>
-</div>
-</div>
-</section>
-<!-- Contact Support Section -->
-<section class="grid grid-cols-1 lg:grid-cols-5 gap-12 bg-primary/5 rounded-2xl p-8 md:p-12 border border-primary/10">
-<div class="lg:col-span-2">
-<h2 class="text-3xl font-black mb-4">Still need help?</h2>
-<p class="text-[#8d655e] dark:text-white/70 mb-8">Our dedicated support team typically responds within 4-6 business hours. Can't wait? Check our community forums.</p>
-<div class="space-y-6">
-<div class="flex items-start gap-4">
-<div class="bg-white dark:bg-background-dark p-3 rounded-lg shadow-sm">
-<span class="material-symbols-outlined text-primary">mail</span>
-</div>
-<div>
-<p class="font-bold">Email Us</p>
-<p class="text-sm text-[#8d655e] dark:text-white/60">support@wallifyig.com</p>
-</div>
-</div>
-<div class="flex items-start gap-4">
-<div class="bg-white dark:bg-background-dark p-3 rounded-lg shadow-sm">
-<span class="material-symbols-outlined text-primary">forum</span>
-</div>
-<div>
-<p class="font-bold">Community Forum</p>
-<p class="text-sm text-[#8d655e] dark:text-white/60">Join 5,000+ active users</p>
-</div>
-</div>
-</div>
-</div>
-<div class="lg:col-span-3">
-<form class="bg-white dark:bg-background-dark/60 p-6 md:p-8 rounded-xl shadow-sm space-y-4">
-<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-<div class="space-y-1.5">
-<label class="text-sm font-bold opacity-80">Full Name</label>
-<input class="w-full p-3 rounded-lg border border-primary/10 bg-background-light/50 focus:border-primary focus:ring-1 focus:ring-primary outline-none" placeholder="John Doe" type="text"/>
-</div>
-<div class="space-y-1.5">
-<label class="text-sm font-bold opacity-80">Email Address</label>
-<input class="w-full p-3 rounded-lg border border-primary/10 bg-background-light/50 focus:border-primary focus:ring-1 focus:ring-primary outline-none" placeholder="john@example.com" type="email"/>
-</div>
-</div>
-<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-<div class="space-y-1.5">
-<label class="text-sm font-bold opacity-80">Issue Category</label>
-<select class="w-full p-3 rounded-lg border border-primary/10 bg-background-light/50 focus:border-primary focus:ring-1 focus:ring-primary outline-none appearance-none">
-<option>Technical Issue</option>
-<option>Billing Question</option>
-<option>Feature Request</option>
-<option>Other</option>
-</select>
-</div>
-<div class="space-y-1.5">
-<label class="text-sm font-bold opacity-80">Priority</label>
-<select class="w-full p-3 rounded-lg border border-primary/10 bg-background-light/50 focus:border-primary focus:ring-1 focus:ring-primary outline-none appearance-none">
-<option>Low</option>
-<option>Medium</option>
-<option>High (Urgent)</option>
-</select>
-</div>
-</div>
-<div class="space-y-1.5">
-<label class="text-sm font-bold opacity-80">Message</label>
-<textarea class="w-full p-3 rounded-lg border border-primary/10 bg-background-light/50 focus:border-primary focus:ring-1 focus:ring-primary outline-none" placeholder="Describe your issue in detail..." rows="4"></textarea>
-</div>
-<button class="w-full py-4 bg-primary hover:bg-primary/90 text-white font-bold rounded-lg transition-colors shadow-lg shadow-primary/20" type="submit">
-                                Send Support Ticket
-                            </button>
-</form>
-</div>
-</section>
-</main>
-<div id="site-footer"></div>
-</div>
-</div>
-<script src="components.js"></script>
-</body></html>
+                    <input
+                        class="w-full h-16 pl-16 pr-6 bg-white border border-[#e1e3e5] rounded-3xl shadow-sm focus:border-primary focus:ring-4 focus:ring-primary/5 transition-all outline-none text-lg"
+                        placeholder="Search for articles..." type="text" />
+                </div>
+            </div>
+        </section>
+
+        <!-- Help Categories -->
+        <section class="py-24 px-6">
+            <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8">
+                <div class="p-10 rounded-3xl border border-[#e1e3e5] hover:shadow-md transition-all space-y-6">
+                    <span class="material-symbols-outlined text-4xl text-primary">rocket_launch</span>
+                    <h3 class="text-xl font-bold">Getting Started</h3>
+                    <p class="text-[#5c5f62] text-sm leading-relaxed">Everything you need to know to get your Instagram
+                        feed live in minutes.</p>
+                    <a href="docs.html"
+                        class="text-primary font-bold text-sm flex items-center gap-1 hover:gap-2 transition-all">
+                        View Guides <span class="material-symbols-outlined text-sm">arrow_forward</span>
+                    </a>
+                </div>
+                <div class="p-10 rounded-3xl border border-[#e1e3e5] hover:shadow-md transition-all space-y-6">
+                    <span class="material-symbols-outlined text-4xl text-primary">brush</span>
+                    <h3 class="text-xl font-bold">Customization</h3>
+                    <p class="text-[#5c5f62] text-sm leading-relaxed">Learn how to match Wallify IG to your store's
+                        unique brand and design.</p>
+                    <a href="docs.html"
+                        class="text-primary font-bold text-sm flex items-center gap-1 hover:gap-2 transition-all">
+                        View Guides <span class="material-symbols-outlined text-sm">arrow_forward</span>
+                    </a>
+                </div>
+                <div class="p-10 rounded-3xl border border-[#e1e3e5] hover:shadow-md transition-all space-y-6">
+                    <span class="material-symbols-outlined text-4xl text-primary">sync_problem</span>
+                    <h3 class="text-xl font-bold">Troubleshooting</h3>
+                    <p class="text-[#5c5f62] text-sm leading-relaxed">Fixing connection issues or display problems with
+                        your Instagram feed.</p>
+                    <a href="docs.html"
+                        class="text-primary font-bold text-sm flex items-center gap-1 hover:gap-2 transition-all">
+                        View Guides <span class="material-symbols-outlined text-sm">arrow_forward</span>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section class="py-24 px-6 bg-[#1a1c1d] text-white overflow-hidden relative">
+            <div class="absolute top-0 right-0 w-1/3 h-full bg-primary/10 blur-[120px] rounded-full"></div>
+            <div class="max-w-5xl mx-auto grid lg:grid-cols-2 gap-20 items-center relative z-10">
+                <div class="space-y-8">
+                    <h2 class="text-4xl font-black tracking-tight">Prefer to talk?</h2>
+                    <p class="text-[#919eab] text-lg font-medium">Our support team is available Mon-Fri, 9am-6pm EST. We
+                        typically respond within 2-4 hours.</p>
+                    <div class="space-y-6">
+                        <div class="flex items-center gap-5">
+                            <div
+                                class="size-12 rounded-2xl bg-white/5 border border-white/10 flex items-center justify-center">
+                                <span class="material-symbols-outlined text-primary">mail</span>
+                            </div>
+                            <div>
+                                <p class="text-[10px] font-black uppercase tracking-widest text-[#919eab]">Email Us</p>
+                                <p class="text-lg font-bold">support@wallifyig.com</p>
+                            </div>
+                        </div>
+                        <div class="flex items-center gap-5">
+                            <div
+                                class="size-12 rounded-2xl bg-white/5 border border-white/10 flex items-center justify-center">
+                                <span class="material-symbols-outlined text-primary">forum</span>
+                            </div>
+                            <div>
+                                <p class="text-[10px] font-black uppercase tracking-widest text-[#919eab]">Live Chat</p>
+                                <p class="text-lg font-bold">Average response: 5 mins</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-10 rounded-[2.5rem] shadow-2xl">
+                    <form class="space-y-6">
+                        <div class="grid md:grid-cols-2 gap-6">
+                            <div class="space-y-2">
+                                <label class="text-[10px] font-black uppercase text-[#919eab]">Name</label>
+                                <input class="w-full p-4 bg-[#f9fafb] border border-[#e1e3e5] rounded-xl text-[#1a1c1d]"
+                                    type="text" />
+                            </div>
+                            <div class="space-y-2">
+                                <label class="text-[10px] font-black uppercase text-[#919eab]">Email</label>
+                                <input class="w-full p-4 bg-[#f9fafb] border border-[#e1e3e5] rounded-xl text-[#1a1c1d]"
+                                    type="email" />
+                            </div>
+                        </div>
+                        <div class="space-y-2">
+                            <label class="text-[10px] font-black uppercase text-[#919eab]">Subject</label>
+                            <input class="w-full p-4 bg-[#f9fafb] border border-[#e1e3e5] rounded-xl text-[#1a1c1d]"
+                                type="text" />
+                        </div>
+                        <div class="space-y-2">
+                            <label class="text-[10px] font-black uppercase text-[#919eab]">Message</label>
+                            <textarea class="w-full p-4 bg-[#f9fafb] border border-[#e1e3e5] rounded-xl text-[#1a1c1d]"
+                                rows="4"></textarea>
+                        </div>
+                        <button
+                            class="w-full py-5 bg-primary text-white font-black rounded-2xl shadow-xl shadow-primary/20 hover:scale-[1.02] transition-all">Send
+                            Message</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
+    <div id="site-footer"></div>
+    <script src="components.js"></script>
+</body>
+
+</html>
